fixed heart on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -535,7 +535,7 @@
 	}
 
 	.heart {
-		right: 130px;
+		right: 136px;
 	}
 
 	.stephan {
